Kafka Service Class

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ src/.DS_Store
 .idea/**/gradle.xml
 .idea/**/libraries
 
+Backend/kafka_2.12-3.6.1/logs/*
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
