Easier topic and thermostat system creation

--- a/Backend/thermostatSystem/src/main/resources/application.properties
+++ b/Backend/thermostatSystem/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 central-server.ports = 10000, 10001, 10002, 10003
-kafka.topics = room1, room2, room3, room4, room5, room6, room7, room8, room9, room10
+kafka.number-of-rooms = 5
 kafka.bootstrap-servers = localhost:9092
