Dynamic numberOfRooms value for Central Server

--- a/Backend/thermostatSystem/src/main/resources/application.properties
+++ b/Backend/thermostatSystem/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 central-server.ports = 10000, 10001, 10002, 10003
-kafka.number-of-rooms = 20
+kafka.number-of-rooms = 30
 kafka.bootstrap-servers = localhost:9092
+replica1.listenerPort = 10000
+replica2.listenerPort = 10001
+replica3.listenerPort = 10002
+replica4.listenerPort = 10003
