--- a/Backend/thermostatSystem/src/main/resources/application.properties
+++ b/Backend/thermostatSystem/src/main/resources/application.properties
@@ -5,3 +5,8 @@ replica1.listenerPort = 10000
 replica2.listenerPort = 10001
 replica3.listenerPort = 10002
 replica4.listenerPort = 10003
+
+replica1.syncPort = 10500
+replica2.syncPort = 10501
+replica3.syncPort = 10502
+replica4.syncPort = 10503
